kubernetes/examples/demo/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: books
  labels:
    app: books
spec:
  containers:
    - image: vielen1991/books:1
      name: books
      livenessProbe:
        httpGet:
          port: 8080
          path: /health
      readinessProbe:
        httpGet:
          port: 8080
          path: /health
      ports:
        - containerPort: 8080
