kubernetes/examples/demo/clusterip.yaml
# Service - NAT (Network address translation https://en.wikipedia.org/wiki/Network_address_translation)
# NAT mechanism - IPTables (Lookup O(N) time), IPVS (Preferable, Lookup O(1) time), depends on cluster set up configuration
# Rule: If request comes to ClusterIP on port 8080 -> redirect it to IP address of pod
# Default balancing algorithm - RoundRobin
# By default - creating Service and Endpoint (what end destination we want to achieve) abstraction
apiVersion: v1
kind: Service
metadata:
  name: books
  # namespace: applications
  labels:
    service: books
  # specify any metadata you want to attach to service - https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
  annotations:
    createdBy: foo
spec:
  selector:
    # using selector - entity Endpoint will be created automatically along with service
    app: books # has to match .spec.template.metadata.labels in deployment.yaml file
  type: ClusterIP # default service type
  ports:
    - port: 8080
      name: http
      targetPort: http # name of port in deployment.yaml
      protocol: TCP
    - port: 8443
      protocol: TCP
      name: https
      targetPort: 8443
