kubernetes/examples/demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: books
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: books.local
      http:
        paths:
          - path: /api/v1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: books
                port:
                  number: 8080
          - path: /nginx-service
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
